Sempre em Frente

--- a/projetos.html
+++ b/projetos.html
@@ -123,8 +123,8 @@
             desc: 'Jogo idle onde você cria e destrói um universo.'
           },
           {
-            name: 'Nowhere but Forward',
-            url: 'nowhere-but-forward',
+            name: 'Sempre em Frente',
+            url: 'sempre-em-frente',
             img: 'img/Projetos/Nowhere but Forward.png',
             desc: 'Jogo de plataforma que usa apenas um botão.'
           },
