--- a/projetos/sempre-em-frente.html
+++ b/projetos/sempre-em-frente.html
@@ -20,7 +20,7 @@
     <meta name="msapplication-TileColor" content="#603cba">
     <meta name="theme-color" content="#6e438d">
 
-    <title>Fupi &#183; Nowhere but Forward</title>
+    <title>Fupi &#183; Sempre em Frente</title>
   </head>
   <body>
     <!-- Olá, eu sou o código-fonte. Por favor não repare na bagunça. '3' !-->
@@ -29,7 +29,7 @@
 
     <section class="proj-header">
       <div class="container">
-        <h1>Nowhere but Forward</h1>
+        <h1>Sempre em Frente</h1>
       </div>
     </section>
 
@@ -53,12 +53,11 @@
           }
         </style>
         
-        <p class="warning">Atenção: Jogo em inglês.</p>
         <div class="grid">
           <div class="grid-item">
             <div class="info">
               <h1>Instruções</h1>
-              <p>Controles: Teclado</p>
+              <p>Controles: Teclado ou mouse</p>
               <p>Segure qualquer botão para pular para frente.</p>
             </div>
           </div>
