--- a/projetos/curassaum.html
+++ b/projetos/curassaum.html
@@ -72,7 +72,7 @@
             <div class="info">
               <h1>Sobre</h1>
               <p>Este jogo foi criado para a game jam Ludum Dare 46.</p>
-              <p>O resultado ainda não saiu mas eu gostei de como o jogo ficou!</p>
+              <p>Fiquei em 716º lugar de 4959 jogos participantes! Estou começando a achar que não fui tão mal assim.</p>
               <p>Lançado em 19 de abril de 2020.</p>
               <h1>Links</h1>
               <p><a href="https://fupi.itch.io/hearty-dose">Página no Itch</a></p>
