--- a/projetos.html
+++ b/projetos.html
@@ -200,6 +200,12 @@
             img: 'img/Projetos/FOSM.png',
             desc: 'Simulador de OS bem simples.'
           },
+          {
+            name: 'FEPCATS AVENCHOR',
+            url: 'fepcats-avenchor',
+            img: 'img/Projetos/Fepcat.png',
+            desc: 'Um jogo de plataforma aleatório jkglajgkfjsgkfs'
+          },
         ],
         'anim': [
           {
