Adiciona novos jogos e página 404

--- a/projetos.html
+++ b/projetos.html
@@ -111,6 +111,18 @@
       let projects = {
         'jogos': [
           {
+            name: 'Feche a Propaganda',
+            url: 'feche-a-propaganda',
+            img: 'img/Projetos/CloseAd.png',
+            desc: 'Tente fechar a propaganda.'
+          },
+          {
+            name: 'Corrida de Teclado',
+            url: 'corrida-de-teclado',
+            img: 'img/Projetos/QwertyRun.png',
+            desc: 'Digite rápido.'
+          },
+          {
             name: 'Curassaum',
             url: 'curassaum',
             img: 'img/Projetos/Hearty Dose.png',
