--- a/404.html
+++ b/404.html
@@ -3,18 +3,18 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <link rel="stylesheet" href="css/master.css">
+    <link rel="stylesheet" href="/css/master.css">
     <link href="https://fonts.googleapis.com/css?family=Ubuntu&display=swap" rel="stylesheet">
 
     <meta name="description" content="Eu crio jogos e outras coisas.">
     <meta name="keywords" content="fupi, fupicat, fupi437, scratch, godot, engine, html5, online, jogos, games, sz, scratcherz, música, royalty-free, public domain">
     <meta name="author" content="Fupi">
 
-    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
-    <link rel="manifest" href="site.webmanifest">
-    <link rel="mask-icon" href="safari-pinned-tab.svg" color="#6e438d">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#6e438d">
     <meta name="apple-mobile-web-app-title" content="Fupi">
     <meta name="application-name" content="Fupi">
     <meta name="msapplication-TileColor" content="#603cba">
@@ -26,8 +26,8 @@
     <!-- Olá, eu sou o código-fonte. Por favor não repare na bagunça. '3' !-->
     
     <header></header>
-
-    <h1>Whoops ('ówò)</h1>
+    <h1 style='margin-top: 189px;'>Whoops ('ówò)>404</h1>
+    <p style='margin-bottom: 189px;'>Essa página não existe. ;-;</p>
 
     <footer></footer>
 
