Adiciona música Glitch Stairs

--- a/projetos.html
+++ b/projetos.html
@@ -247,6 +247,12 @@
         ],
         'music': [
           {
+            name: 'Glitch Stairs',
+            url: 'glitch-stairs',
+            img: 'img/Projetos/Escada.png',
+            desc: 'Uma musiquinha bizarra.'
+          },
+          {
             name: 'Elevar',
             url: 'elevar',
             img: 'img/Projetos/Elevar.png',
