Adiciona licença a glitch stairs

--- a/projetos/glitch-stairs.html
+++ b/projetos/glitch-stairs.html
@@ -67,6 +67,7 @@
               <p><a href="audio/GlitchStairs.wav">Download WAV</a></p>
               <p><a href="audio/GlitchStairs.ogg">Download OGG</a></p>
               <p><a href="audio/GlitchStairs.zip">Arquivo ZIP com loops e faixas de instrumento</a></p>
+              <p>Licença CC0 (domínio público), use para qualquer coisa, não precisa dar créditos.</p>
             </div>
           </div>
         </div>
