Scratchquest + twitter + gamejolt + cleanup

--- a/autoload/footer.html
+++ b/autoload/footer.html
@@ -1,13 +1,14 @@
 <div class="container">
   <p>
     <a href="https://scratch.mit.edu/users/Fupicat/">Scratch</a> &#183;
+    <a href="https://gamejolt.com/@Fupi">Gamejolt</a> &#183;
     <a href="https://fupi.itch.io">Itch</a> &#183;
     <a href="https://github.com/Fupicat">GitHub</a> &#183;
     <a href="https://twitter.com/fupibr">Twitter</a> &#183;
     <a href="https://youtube.com/c/fupii">YouTube</a> &#183;
     <a href="https://opengameart.org/users/fupi">OpenGameArt</a>
   </p>
-  <p><a id='themebtn' href='#themebtn' onclick='changetheme()'>Tema: Padrão</a> &#183; <a href="/email.html">Quer receber emails das minhas coisas?</a></p>
+  <p><a id='themebtn' href='#themebtn' onclick='changetheme()'>Tema: Padrão</a></p>
 </div>
 
 <script src="/js/js.cookie.min.js"></script>
