--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
             </a>
           </div>
         </div>
+        <a class="twitter-timeline" data-height="328" data-dnt="true" data-theme="dark" href="https://twitter.com/fupibr?ref_src=twsrc%5Etfw">Tweets por fupibr</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
 
       </div>
 
@@ -64,30 +65,30 @@
         <h1>Coisas em Destaque</h1>
         <div class="grid">
 
-          <a href="projetos/curassaum.html">
+          <a href="projetos/scratchquest.html">
             <div class='grid-item'>
-              <img src="img/Projetos/Hearty Dose.png" alt="Curassaum">
+              <img src="img/Projetos/ScratchQuest.png" alt="Scratch Quest">
               <div class="info">
-                <h1>Curassaum</h1>
-                <p>Meu jogo para a Ludum Dare 46: Mantenha o coração vivo!</p>
+                <h1>Scratch Quest</h1>
+                <p>Meu jogo para a jam EvolutronRemake: Ajude Scratch a virar a melhor Game Engine do mundo!</p>
               </div>
             </div>
           </a>
-          <a href="projetos/scratch-cat-3d.html">
+          <a href="https://fupicat.github.io/ScratchUpload/">
             <div class='grid-item'>
-              <img src="img/Projetos/ScratchCat3D.png" alt="Scratch Cat 3D">
+              <img src="img/Projetos/ScratchUpload.png" alt="Scratch Upload">
               <div class="info">
-                <h1>Modelo 3D do Scratch Cat</h1>
-                <p>Um modelo 3D que eu fiz, baseado no mascote do Scratch.</p>
+                <h1>Scratch Upload</h1>
+                <p>Hosteie imagens para os fóruns do Scratch sem registro nem propagandas.</p>
               </div>
             </div>
           </a>
-          <a href="https://fupicat.github.io/replacer/">
+          <a href="/projetos/sempre-em-frente.html">
             <div class='grid-item'>
-              <img src="img/Projetos/Replacer.png" alt="Replacer">
+              <img src="img/Projetos/Nowhere but Forward.png" alt="Sempre em Frente">
               <div class="info">
-                <h1>Replacer</h1>
-                <p>Formate texto automaticamente, troque fragmentos de texto por outros.</p>
+                <h1>Sempre em Frente</h1>
+                <p>Jogo de plataforma que usa apenas um botão.</p>
               </div>
             </div>
           </a>
@@ -102,6 +103,7 @@
           </a>
 
         </div>
+        <a class="twitter-timeline" data-height="900" data-theme="dark" href="https://twitter.com/fupibr?ref_src=twsrc%5Etfw">Tweets por fupibr</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
       </div>
     </section>
 
