--- a/projetos.html
+++ b/projetos.html
@@ -111,6 +111,12 @@
       let projects = {
         'jogos': [
           {
+            name: 'Scratch Quest',
+            url: 'scratchquest',
+            img: 'img/Projetos/ScratchQuest.png',
+            desc: 'Jogue como Scratch e derrote todas as Game Engines!'
+          },
+          {
             name: 'Feche a Propaganda',
             url: 'feche-a-propaganda',
             img: 'img/Projetos/CloseAd.png',
