Urinight + Sobre cleanup + Removi Twitter widget no mobile

--- a/index.html
+++ b/index.html
@@ -70,16 +70,16 @@
               <img src="img/Projetos/ScratchQuest.png" alt="Scratch Quest">
               <div class="info">
                 <h1>Scratch Quest</h1>
-                <p>Meu jogo para a jam EvolutronRemake: Ajude Scratch a virar a melhor Game Engine do mundo!</p>
+                <p>Ajude Scratch a virar a melhor Game Engine do mundo!</p>
               </div>
             </div>
           </a>
-          <a href="https://fupicat.github.io/ScratchUpload/">
+          <a href="projetos/urinight.html">
             <div class='grid-item'>
-              <img src="img/Projetos/ScratchUpload.png" alt="Scratch Upload">
+              <img src="img/Projetos/Urinight.png" alt="Urinight">
               <div class="info">
-                <h1>Scratch Upload</h1>
-                <p>Hosteie imagens para os fóruns do Scratch sem registro nem propagandas.</p>
+                <h1>Urinight</h1>
+                <p>Simulador de fazer xixi durante a noite.</p>
               </div>
             </div>
           </a>
@@ -97,13 +97,12 @@
               <img src="img/Projetos/crie sua dança.png" alt="Crie sua Dança">
               <div class="info">
                 <h1>Crie sua Dança</h1>
-                <p>Um jogo besta onde você pode criar sua própria dança besta.</p>
+                <p>Crie a sua própria dancinha besta.</p>
               </div>
             </div>
           </a>
 
         </div>
-        <a class="twitter-timeline" data-height="900" data-theme="dark" href="https://twitter.com/fupibr?ref_src=twsrc%5Etfw">Tweets por fupibr</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
       </div>
     </section>
 
