--- a/projetos.html
+++ b/projetos.html
@@ -111,6 +111,12 @@
       let projects = {
         'jogos': [
           {
+            name: 'Urinight',
+            url: 'urinight',
+            img: 'img/Projetos/Urinight.png',
+            desc: 'Simulador de fazer xixi no meio da noite.'
+          },
+          {
             name: 'Scratch Quest',
             url: 'scratchquest',
             img: 'img/Projetos/ScratchQuest.png',
