--- a/sobre.html
+++ b/sobre.html
@@ -30,12 +30,6 @@
     <article>
       <div class="container">
 
-        <style>
-          span:hover {
-            cursor: default;
-          }
-        </style>
-
         <h1>Sobre</h1>
         <img class="img-right" src="img/Eu.png" alt="Eu" title="oi" style="width: 15em;">
         <p>Olá, eu sou o Fupi. Eu faço <i>coisas</i> na internet desde 2013, e este site vai servir para eu mostrá-las. Você encontrará vários tipos de <i>coisas</i> aqui, como por exemplo:</p>
@@ -44,12 +38,12 @@
           <li>Animações</li>
           <li>Músicas</li>
           <li>Projetos não terminados</li>
-          <li>Tutoriais</li>
+          <li>Tutoriais (em breve?)</li>
           <li>Qualquer outra <i>coisa</i> que eu tiver vontade de postar</li>
         </ul>
-        <p>Eu vou atualizar esse site quando eu puder. A maioria dos meus jogos novos são feitos para game jams (competições de criação de jogos), especificamente a Ludum Dare e a GMTK Jam, então você pode esperar que jogos novos sejam postados em abril, agosto, e outubro.</p>
-        <p>A maioria das minhas <i>coisas</i> são postadas também no <a href="https://scratch.mit.edu/users/Fupicat">Scratch</a> e <a href="https://twitter.com/Fupicat_BR">Twitter</a>, porque lá tem uma comunidade maior e mais gente vendo. Então se você quer saber quando eu faço alguma <i>coisa</i> você devia checar meus perfis lá também.</p>
-        <p>Todas as minhas <i>coisas</i> (jogos, código, arte, música, este site, <a href="https://creativecommons.org/licenses/by-sa/2.0/">exceto meus projetos do Scratch</a>) estão no <a href="https://creativecommons.org/share-your-work/public-domain/cc0/">domínio público</a>, e todos os assets usados para fazê-los (excluindo software) também estão. Sinta-se livre para usar minhas <i>coisas</i> como quiser, crédito é opcional.</p>
+        <p>Eu vou atualizar esse site quando eu puder. A maioria dos meus jogos novos são feitos para game jams (competições de criação de jogos), especificamente a Ludum Dare e a GMTK Jam, então você pode esperar pelo menos 3 jogos novos por ano.</p>
+        <p>Se você quer saber quando eu faço algum projeto, work-in-progress, etc, me siga no <a href='https://twitter.com/fupibr'>Twitter</a>!</p>
+        <p>Todas as minhas <i>coisas</i> (jogos, código, arte, música, este site, <a href="https://creativecommons.org/licenses/by-sa/2.0/">exceto meus projetos do Scratch</a>) são <a href="https://creativecommons.org/share-your-work/public-domain/cc0/">domínio público</a>, e todos os assets usados para fazê-los (excluindo software) também são. Sinta-se livre para usar minhas <i>coisas</i> como quiser, crédito é opcional.</p>
 
         <h1>O que eu uso</h1>
         <p>Se você quer saber os programas e outras <i>coisas</i> que eu uso, aqui vai uma listinha do que eu consigo lembrar:</p>
@@ -59,7 +53,9 @@
             <li><a href="https://godotengine.org/">Godot Engine</a> (para fazer jogos)</li>
             <li><a href="https://krita.org/">Krita</a> (para fazer gráficos e edição de imagem)</li>
             <li><a href="https://inkscape.org/">Inkscape</a> (para fazer gráficos em vetorial, por exemplo meu logo)</li>
-            <li><a href="https://blender.org">Blender</a> (programa de modelagem 3D que eu uso pra fazer modelos 3D e edição de vídeo às vezes)</li>
+            <li><a href="https://kdenlive.org/en/">Kdenlive</a> (editor de vídeo que eu uso pra vídeos simples sem muitas transições e animação)</li>
+            <li><a href="https://blender.org/">Blender</a> (programa de modelagem 3D)</li>
+            <li><a href="https://lmms.io/">LMMS</a> (DAW simples mas muito boa para fazer música)</li>
             <li><a href="https://www.audacityteam.org/">Audacity</a> (editor de áudio que eu uso pra muitas <i>coisas</i>)</li>
             <li><a href="https://www.mozilla.org/en-US/firefox/new/">Firefox</a> (navegador que é bem útil na criação de sites, ele tem um inspetor de elemento muito completo)</li>
             <li><a href="https://linuxmint.com/">Linux Mint Cinnamon</a> (OS que eu uso no meu PC)</li>
@@ -71,13 +67,17 @@
           </ul>
           <li><h3>Pago</h3></li>
           <ul>
-            <li><a href="https://store.steampowered.com/app/330070/VEGAS_Movie_Studio_13_Platinum__Steam_Powered/">VEGAS Movie Studio 13 Platinum</a> (editor de vídeo que eu uso que, apesar de ser antigo e só funcionar no Windows, é bom e barato - se você comprar em promoção) (eu queria poder apoiar mais o Kdenlive mas simplesmente não dá, é muito bugado)</li>
+            <li><a href="https://store.steampowered.com/app/330070/VEGAS_Movie_Studio_13_Platinum__Steam_Powered/">VEGAS Movie Studio 13 Platinum</a> (editor de vídeo que eu uso que, apesar de ser antigo e só funcionar no Windows, é bom e barato - se você comprar em promoção)</li>
           </ul>
         </ul>
 
         <h1>Contato</h1>
-        <p>Se você quiser falar comigo, sobre qualquer <i>coisa</i>, você pode me mandar um comentário no <a href="https://scratch.mit.edu/users/Fupicat">Scratch</a>, uma PM no <a href="https://twitter.com/Fupicat_BR">Twitter</a> ou um email (fupicat arroba gmail ponto com), mas é bem mais provável eu te responder se você me enviar um email. Eu não costumo checar muito minhas redes sociais.</p>
-        <p>Esse ano eu vou começar a trabalhar então obviamente vou ter menos tempo pra ficar na internet, mas me envie alguma <i>coisa</i> mesmo assim. Adoro conversar lol, não precisa ser sobre nada em específico.</p>
+        <p>Eu nunca tô ocupado demais pra conversar então fala comigo pfv:</p>
+        <ul>
+          <li>Discord: Fupi#4400</li>
+          <li>Mande DM no Twitter: <a href="https://twitter.com/fupibr">@fupibr</a></li>
+          <li>Email: fupicat (arroba) gmail (ponto) com</li>
+        </ul>
 
       </div>
     </article>
