--- a/autoload/navbar.html
+++ b/autoload/navbar.html
@@ -1,8 +1,8 @@
 <div class='container'>
     <a href="/index.html"><img src="/img/LogoSmall.png" alt="Fupi" onmouseover="this.src='/img/Logo.png'" onmouseout="this.src='/img/LogoSmall.png'"></a>
     <nav>
-        <a href="/sobre.html">Sobre</a>
         <a href="/projetos.html">Projetos</a>
-        <a href="https://fupiblog.blogspot.com">Blog</a>
+        <a href="/sobre.html">Sobre</a>
+        <a href="https://twitter.com/fupibr">Twitter</a>
     </nav>
 </div>
