+projetos atuais na homepage

--- a/index.html
+++ b/index.html
@@ -83,15 +83,6 @@
               </div>
             </div>
           </a>
-          <a href="/projetos/sempre-em-frente.html">
-            <div class='grid-item'>
-              <img src="img/Projetos/Nowhere but Forward.png" alt="Sempre em Frente">
-              <div class="info">
-                <h1>Sempre em Frente</h1>
-                <p>Jogo de plataforma que usa apenas um botão.</p>
-              </div>
-            </div>
-          </a>
           <a href="projetos/crie-sua-danca.html">
             <div class='grid-item'>
               <img src="img/Projetos/crie sua dança.png" alt="Crie sua Dança">
@@ -101,8 +92,31 @@
               </div>
             </div>
           </a>
+          <a href="https://github.com/Fupicat/GodotRecorder">
+            <div class='grid-item'>
+              <img src="img/Projetos/GodotRecorder.png" alt="GodotRecorder">
+              <div class="info">
+                <h1>GodotRecorder</h1>
+                <p>Projeto da Godot Engine que te deixa criar e renderizar animações usando a própria engine.</p>
+              </div>
+            </div>
+          </a>
 
         </div>
+      </div>
+    </section>
+
+    <section id='progress'>
+      <div class='container'>
+        <article>
+          <h1>Projetos Atuais</h1>
+          <p>O que estou fazendo no momento, na ordem de mais para menos importante, ou de menos para mais demorado.</p>
+          <ol>
+            <li>Modelagem 3D voluntária para outro jogo.</li>
+            <li>Tutorial do <a href='https://github.com/Fupicat/GodotRecorder'>GodotRecorder</a>.</li>
+            <li><a href='https://twitter.com/fupibr/status/1283934202967334912'>SZ</a>.</li>
+          </ol>
+        </article>
       </div>
     </section>
 
