Página de ideias aleatorias

--- a/index.html
+++ b/index.html
@@ -116,6 +116,9 @@
             <li>Tutorial do <a href='https://github.com/Fupicat/GodotRecorder'>GodotRecorder</a>.</li>
             <li><a href='https://twitter.com/fupibr/status/1283934202967334912'>SZ</a>.</li>
           </ol>
+          <a href="ideias.html">Minha página de ideias aleatórias</a>
+          <br>
+          <br>
         </article>
       </div>
     </section>
