--- a/sobre.html
+++ b/sobre.html
@@ -71,7 +71,7 @@
           </ul>
         </ul>
 
-        <h1>Contato</h1>
+        <h1 id='contato'>Contato</h1>
         <p>Eu nunca tô ocupado demais pra conversar então fala comigo pfv:</p>
         <ul>
           <li>Discord: Fupi#4400</li>
