--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
           <ol>
             <li>Modelagem 3D voluntária para outro jogo.</li>
             <li>Tutorial do <a href='https://github.com/Fupicat/GodotRecorder'>GodotRecorder</a>.</li>
+            <li>Recriação 1:1 do ScratchQuest no Scratch</li>
             <li><a href='https://twitter.com/fupibr/status/1283934202967334912'>SZ</a>.</li>
           </ol>
           <a href="ideias.html">Minha página de ideias aleatórias</a>
