--- a/ideias.html
+++ b/ideias.html
@@ -77,6 +77,30 @@
             <li>Difícil, mas posso botar se eu estudar bastante: jogar online com amigos simultaneamente por LAN, tipo como funciona o online do Stardew Valley.</li>
             <li>Usando a API do Gamejolt, você poderá visitar planetas de outras pessoas.</li>
           </ul>
+          <li>Launcher</li>
+          <ul>
+            <li>Quero também fazer um launcher, separado do jogo em si, que detecta atualizações do jogo e baixa automaticamente.</li>
+            <li>Vai ter um arquivo no GitHub que eu atualizo com o número da versão atual. Se a versão do jogo instalado no pc for diferente da versão que está nesse arquivo, ele pergunta se quer baixar a nova atualização, e baixa sozinho.</li>
+            <li>Provavelmente não será feito no Godot, mesmo que au acho que seja possível. Quero aprender alguma outra linguagem para fazer isso.</li>
+          </ul>
+        </ul>
+
+        <h2>ScratchQuest no Scratch</h2>
+
+        <ul>
+          <li>Colisão</li>
+          <ul>
+            <li>Hélice do nível 3: Se alguém encostar nela, faz um broadcast, e esse alguém é empurrado na direção que a hélice está apontando, ou a direção contrária, dependendo de que lado está dela, vezes a distância desse alguém do meio da hélice, dividido por algum fator que eu decidir que fica bom.</li>
+            <li>As caixas do nível 4 só te empurram quando se movem, faz broadcast, bloco customizável no Scratch Cat feito para empurrar em uma direção com uma força.</li>
+          </ul>
+          <li>Gráficos vão ser todos re-feitos no vetorial, para diminuir o tamanho do sb3.</li>
+          <li>Iluminação</li>
+          <ul>
+            <li>Apenas um foco de luz.</li>
+            <li>Normal maps falsos, uma fantasia com shading com efeito fantasma em cima da fantasia normal do gato, muda o efeito fantasma quando se aproxima da luz.</li>
+            <li>Sombras serão retangulozões atrás dos atores que olham na direção da luz.</li>
+            <li>Quanto mais longe da luz, menos efeito fantasma na sombra.</li>
+          </ul>
         </ul>
 
         <h2>Jogos one-off</h2>
