--- a/ideias.html
+++ b/ideias.html
@@ -58,7 +58,7 @@
           </ul>
           <li>NPCs</li>
           <ul>
-            <li>NPCs serão gerados aleatoriamente no início do jogo.</li>
+            <li>NPCs serão pré-feitos e cada um terá sua própria personalidade, interesses, trabalho e dinheiro.</li>
             <li>Cada NPC vai ter uma rotina e objetivos gerados no início do dia.</li>
             <li>Você pode conversar com eles se não estiverem super ocupados. Como o tempo para você e para os NPCs passa de forma diferente, eles quase sempre terão tempo pra conversar.</li>
             <li>Se você formar uma amizade com algum NPC, você pode influenciar a rotina deles, marcar encontros, etc.</li>
@@ -71,6 +71,20 @@
             <li>Pode ser possível você deixar o narrador irritado se fizer algo que ele desaprova, e ele vai ficar de birra com você, ou ele pode ser o seu melhor amigo.</li>
           </ul>
           <li>Você vai poder customizar seu personagem, seu planeta e sua nave (como se fosse a sua casa).</li>
+          <li>Customização</li>
+          <ul>
+            <li>O jogo será quase 100% configurável.</li>
+            <li>Você poderá criar um save novo a partir das configurações padrão do jogo, ou usar um arquivo preset, criado por você ou baixado da internet.</li>
+            <li>Você poderá mudar as salas, planetas, NPCs, mudar valores como quanto dura um dia, quanto de energia você tem no início do dia, etc.</li>
+            <li>Isso te deixaria ajustar a dificuldade do jogo, criar modos de desafio, ou criar suas próprias histórias usando o jogo.</li>
+            <li>Se possível, também quero que você consiga criar seus próprios itens, roupas, salas, planetas e NPCs, usando sua própria arte, sem precisar moddar o jogo.</li>
+          </ul>
+          <li>Mods</li>
+          <ul>
+            <li>Quero poder colocar um jeito bem fácil de moddar o jogo com seus próprios scripts.</li>
+            <li>Você teria que ter uma pasta para o seu mod, e um arquivo de configuração, onde você coloca em que cenas os seus scripts são carregados, e só.</li>
+            <li>Um script sempre será carregado como filho direto do node da cena ativa, então a melhor prática seria criar um node simples que carrega na cena, e aí ele pode navegar por ela e spawnar outros nodes.</li>
+          </ul>
           <li>Online</li>
           <ul>
             <li>Quero botar algumas funções online no jogo, mas nada parecido com MMO, já que o SZ não vai mais ser um mundo virtual e sim um simulador de vida.</li>
