--- a/projetos/mundo-dos-palitos.html
+++ b/projetos/mundo-dos-palitos.html
@@ -75,7 +75,7 @@
 
           <a href="https://scratch.mit.edu/projects/353414298/embed">
             <div class="grid-item">
-              <img src="https://cdn2.scratch.mit.edu/get_image/project/353414298_1440x1080.png" alt="Episódio 1">
+              <img src="https://cdn2.scratch.mit.edu/get_image/project/353414298_1440x1080.png">
               <div class="info">
                 <h1>Ep 1</h1>
                 <p>Um portal estranho surge na terra e começa a sugar tudo o que existe.</p>
@@ -85,7 +85,7 @@
 
           <a href="https://scratch.mit.edu/projects/353433827/embed">
             <div class="grid-item">
-              <img src="https://cdn2.scratch.mit.edu/get_image/project/353433827_1440x1080.png" alt="Episódio 1">
+              <img src="https://cdn2.scratch.mit.edu/get_image/project/353433827_1440x1080.png">
               <div class="info">
                 <h1>Ep 2 - A Casa</h1>
                 <p>O portal aumenta e Fupi é sugado.</p>
@@ -95,7 +95,7 @@
 
           <a href="https://scratch.mit.edu/projects/353902379/embed">
             <div class="grid-item">
-              <img src="https://cdn2.scratch.mit.edu/get_image/project/353902379_1440x1080.png" alt="Episódio 1">
+              <img src="https://cdn2.scratch.mit.edu/get_image/project/353902379_1440x1080.png">
               <div class="info">
                 <h1>Ep 3 - O Lápis Estranho</h1>
                 <p>O grupo encontra um lápis aparentemente inútil.</p>
@@ -105,7 +105,7 @@
 
           <a href="https://scratch.mit.edu/projects/353968870/embed">
             <div class="grid-item">
-              <img src="https://cdn2.scratch.mit.edu/get_image/project/353968870_1440x1080.png" alt="Episódio 1">
+              <img src="https://cdn2.scratch.mit.edu/get_image/project/353968870_1440x1080.png">
               <div class="info">
                 <h1>Ep 4 - A Nave</h1>
                 <p>Uma nave estranha persegue os habitantes da dimensão stick.</p>
@@ -115,7 +115,7 @@
 
           <a href="https://scratch.mit.edu/projects/356040790/embed">
             <div class="grid-item">
-              <img src="https://cdn2.scratch.mit.edu/get_image/project/356040790_1440x1080.png" alt="Episódio 1">
+              <img src="https://cdn2.scratch.mit.edu/get_image/project/356040790_1440x1080.png">
               <div class="info">
                 <h1>Ep 5 - A Não</h1>
                 <p>Algo terrível acontece com o lápis...</p>
@@ -125,7 +125,7 @@
 
           <a href="https://scratch.mit.edu/projects/356242806/embed">
             <div class="grid-item">
-              <img src="https://cdn2.scratch.mit.edu/get_image/project/356242806_1440x1080.png" alt="Episódio 1">
+              <img src="https://cdn2.scratch.mit.edu/get_image/project/356242806_1440x1080.png">
               <div class="info">
                 <h1>Ep 6 - O Mistério da Nave</h1>
                 <p>Leo se junta ao grupo.</p>
@@ -135,7 +135,7 @@
 
           <a href="https://scratch.mit.edu/projects/356333657/embed">
             <div class="grid-item">
-              <img src="https://cdn2.scratch.mit.edu/get_image/project/356333657_1440x1080.png" alt="Episódio 1">
+              <img src="https://cdn2.scratch.mit.edu/get_image/project/356333657_1440x1080.png">
               <div class="info">
                 <h1>Ep 7 - Quem é esse Cara?</h1>
                 <p>O grupo conhece seu primeiro obstáculo.</p>
@@ -145,7 +145,7 @@
 
           <a href="https://scratch.mit.edu/projects/356341657/embed">
             <div class="grid-item">
-              <img src="https://cdn2.scratch.mit.edu/get_image/project/356341657_1440x1080.png" alt="Episódio 1">
+              <img src="https://cdn2.scratch.mit.edu/get_image/project/356341657_1440x1080.png">
               <div class="info">
                 <h1>Ep 8 - Buraco</h1>
                 <p>Voltar para casa será mais difícil do que aparenta.</p>
@@ -155,7 +155,7 @@
 
           <a href="https://scratch.mit.edu/projects/356414735/embed">
             <div class="grid-item">
-              <img src="https://cdn2.scratch.mit.edu/get_image/project/356414735_1440x1080.png" alt="Episódio 1">
+              <img src="https://cdn2.scratch.mit.edu/get_image/project/356414735_1440x1080.png">
               <div class="info">
                 <h1>Ep 9 - Perseguição</h1>
                 <p>O grupo persegue os habitantes para pedir ajuda.</p>
@@ -165,7 +165,7 @@
 
           <a href="https://scratch.mit.edu/projects/357975641/embed">
             <div class="grid-item">
-              <img src="https://cdn2.scratch.mit.edu/get_image/project/356414735_1440x1080.png" alt="Episódio 1">
+              <img src="https://cdn2.scratch.mit.edu/get_image/project/356414735_1440x1080.png">
               <div class="info">
                 <h1>Ep 10 - Caímos</h1>
                 <p>O caminho fica mais tortuoso.</p>
@@ -175,7 +175,7 @@
 
           <a href="https://scratch.mit.edu/projects/358801569/embed">
             <div class="grid-item">
-              <img src="https://cdn2.scratch.mit.edu/get_image/project/358801569_1440x1080.png" alt="Episódio 1">
+              <img src="https://cdn2.scratch.mit.edu/get_image/project/358801569_1440x1080.png">
               <div class="info">
                 <h1>Ep 11 - A Cidade</h1>
                 <p>Eles chegam à cidade stick, mas a que preço?</p>
@@ -185,7 +185,7 @@
 
           <a href="https://scratch.mit.edu/projects/360253081/embed">
             <div class="grid-item">
-              <img src="https://cdn2.scratch.mit.edu/get_image/project/360253081_1440x1080.png" alt="Episódio 1">
+              <img src="https://cdn2.scratch.mit.edu/get_image/project/360253081_1440x1080.png">
               <div class="info">
                 <h1>Ep 12 - O Cara</h1>
                 <p>Parece que eles não estão sozinhos a final de contas.</p>
@@ -195,7 +195,7 @@
 
           <a href="https://scratch.mit.edu/projects/361028257/embed">
             <div class="grid-item">
-              <img src="https://cdn2.scratch.mit.edu/get_image/project/361028257_1440x1080.png" alt="Episódio 1">
+              <img src="https://cdn2.scratch.mit.edu/get_image/project/361028257_1440x1080.png">
               <div class="info">
                 <h1>Ep 13 - A Câmera</h1>
                 <p>Leo descobre uma ferramenta incrível.</p>
@@ -205,7 +205,7 @@
 
           <a href="https://scratch.mit.edu/projects/361401469/embed">
             <div class="grid-item">
-              <img src="https://cdn2.scratch.mit.edu/get_image/project/361401469_1440x1080.png" alt="Episódio 1">
+              <img src="https://cdn2.scratch.mit.edu/get_image/project/361401469_1440x1080.png">
               <div class="info">
                 <h1>Ep 14 - A Foto</h1>
                 <p>O vilão entra em uma enrascada.</p>
@@ -215,7 +215,7 @@
 
           <a href="https://scratch.mit.edu/projects/362782449/embed">
             <div class="grid-item">
-              <img src="https://cdn2.scratch.mit.edu/get_image/project/362782449_1440x1080.png" alt="Episódio 1">
+              <img src="https://cdn2.scratch.mit.edu/get_image/project/362782449_1440x1080.png">
               <div class="info">
                 <h1>Ep 15 - O Plano</h1>
                 <p>Os vilões e os herois têm suas próprias ideias sobre como prosseguir.</p>
@@ -225,7 +225,7 @@
 
           <a href="https://scratch.mit.edu/projects/363614029/embed">
             <div class="grid-item">
-              <img src="https://cdn2.scratch.mit.edu/get_image/project/363614029_1440x1080.png" alt="Episódio 1">
+              <img src="https://cdn2.scratch.mit.edu/get_image/project/363614029_1440x1080.png">
               <div class="info">
                 <h1>Ep 16 - O Aluguel</h1>
                 <p>Os herois se infiltram na cidade stick.</p>
@@ -235,10 +235,30 @@
 
           <a href="https://scratch.mit.edu/projects/365524246/embed">
             <div class="grid-item">
-              <img src="https://cdn2.scratch.mit.edu/get_image/project/365524246_1440x1080.png" alt="Episódio 1">
+              <img src="https://cdn2.scratch.mit.edu/get_image/project/365524246_1440x1080.png">
               <div class="info">
                 <h1>Ep 17 - Os Ninjas</h1>
                 <p>Parece que eles não estão sozinhos a final de contas.²</p>
+              </div>
+            </div>
+          </a>
+
+          <a href="https://scratch.mit.edu/projects/408787534/embed">
+            <div class="grid-item">
+              <img src="https://cdn2.scratch.mit.edu/get_image/project/408787534_1440x1080.png">
+              <div class="info">
+                <h1>Ep 18 - A emboscada</h1>
+                <p>A aventura dos sticks na cidade grande chega a um fim inesperado.</p>
+              </div>
+            </div>
+          </a>
+
+          <a href="https://scratch.mit.edu/projects/422118451/embed">
+            <div class="grid-item">
+              <img src="https://cdn2.scratch.mit.edu/get_image/project/422118451_1440x1080.png">
+              <div class="info">
+                <h1>Ep 19 - Energia</h1>
+                <p>Tudo parece ir de acordo com o plano.</p>
               </div>
             </div>
           </a>
